@@ -1,21 +1,18 @@
 package com.rascal.core.web.listener;
 
-import java.util.Map;
-
-import javax.servlet.ServletContext;
-import javax.servlet.ServletContextEvent;
-import javax.servlet.ServletContextListener;
-
-import lab.s2jh.core.cons.GlobalConstant;
-import lab.s2jh.core.context.SpringContextHolder;
-import lab.s2jh.support.service.DynamicConfigService;
-
+import com.google.common.collect.Maps;
+import com.rascal.core.cons.GlobalConstant;
+import com.rascal.core.context.SpringContextHolder;
+import com.rascal.support.service.DynamicConfigService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.ApplicationContext;
 import org.springframework.web.context.support.WebApplicationContextUtils;
 
-import com.google.common.collect.Maps;
+import javax.servlet.ServletContext;
+import javax.servlet.ServletContextEvent;
+import javax.servlet.ServletContextListener;
+import java.util.Map;
 
 /**
  * Spring容器加载“之后”的ServletContextListener
@@ -39,7 +36,7 @@ public class ApplicationContextPostListener implements ServletContextListener {
             logger.info("[{}] init context ...", appName);
 
             //构建版本
-            sc.setAttribute("build_version", new Boolean(DynamicConfigService.getBuildVersion()));
+            sc.setAttribute("build_version", Boolean.valueOf(DynamicConfigService.getBuildVersion()));
 
             DynamicConfigService dynamicConfigService = SpringContextHolder.getBean(DynamicConfigService.class);
             Map<String, Object> globalCfg = Maps.newHashMap();
@@ -47,7 +44,7 @@ public class ApplicationContextPostListener implements ServletContextListener {
             //系统标题
             globalCfg.put("cfg_system_title", dynamicConfigService.getString("cfg_system_title"));
             //开发模式boolean参数
-            globalCfg.put("dev_mode", new Boolean(dynamicConfigService.getString("dev_mode")));
+            globalCfg.put("dev_mode", Boolean.valueOf(dynamicConfigService.getString("dev_mode")));
 
             Map<String, Object> globalConstant = Maps.newHashMap();
             sc.setAttribute("cons", globalConstant);
